# optics-by-example

./: .gitignore  flake.nix  optics.cabal
app/: Main.hs  OpticsImports.hs
