cabal-version: 3.0
name: optics
version: 0.1.0.0

executable optics
    -- import: warnings
    main-is: Main.hs
    build-depends:
        base >=4.17.0.0,
        haskell-say ^>=1.0.0.0,
        aeson,
        containers,
        lens,
        lens-aeson,
        mtl,
        text
    hs-source-dirs: app
    default-language: Haskell2010


